2006-03-15  Per Bothner  <per@bothner.com>

	* XQuery.java (inXQuery): Declare fn:boolean and fn:in-scope-prefixes.

	* XQuery.java (initXQuery): Declare fn:abs, fn:floor, fn:ceiling, and
	fn:round-half-to-even.

	* XQParser.java (makeBinary): Use XQuery-specific ArithOp operators.
	(parseUnaryOp): Proper implementation of unary operators.

2006-03-14  Per Bothner  <per@bothner.com>

	* XQuery.java (initXQuery): Declare fn:zero-or-one, fn:one-or-more,
	and fn:exactly-one.

2006-03-04  Per Bothner  <per@bothner.com>

	* XQParser.java (parseNodeTest): Defer getRawToken until after a
	possible missing context error message.

2006-03-01  Per Bothner  <per@bothner.com>

	* XQParser.java (FLOAT_TOKEN): Replace by DECIMAL_TOKEN, DOUBLE_TOKEN.
	(getRawToken): Fix recognition of numbers to distinguish
	xs:decimal literals from xs:double literals - which have exponent.
	(parseMaybePrimaryExpr): Handle double/decimal literals correctly.

	* XQParser.java: Pass XQuery error code various places.
	(error, fatal): New methods take error code.

	* XQParser.java (OP_TREAT_AS, OP_CASTABLE_AS, OP_CAST_AS): New tokens.
	(priority): Handle new tokens.
	(match(String,String,boolean)): New method.
	(peekOperator): Recognize 'cast as', 'treat as', castable as'.
	(parseBinaryExpr): Handle new operations.

	(DECLARE_XMLSPACE_TOKEN): Rename to DECLARE_BOUNDARY_SPACE_TOKEN.
	(DECLARE_ORDERING_TOKEN): New token.
	(orderingModeUnordered): New field.
	(parseMaybePrimaryExpr): Recognize 'declare orderering'.

	* XQParser.java (OP_ELEMENT, OP_ATTRIBUTE, OP_ITEM, OP_EMPTY_SEQUENCE,
	OP_SCHEMA_ATTRIBUTE, OP_SCHEMA_ELEMENT, IF_LPAREN_TOKEN,
	TYPESWITCH_LPAREN_TOKEN, FOR_DOLLAR_TOKEN, LET_DOLLAR_TOKEN,
	SOME_DOLLAR_TOKEN, EVERY_DOLLAR_TOKEN, CASE_DOLLAR_TOKEN,
	VALIDATE_LBRACE_TOKEN, ORDERED_LBRACE_TOKEN, UNORDERED_LBRACE_TOKEN,
	ELEMENT_TOKEN, ATTRIBUTE_TOKEN, TEXT_TOKEN, COMMENT_TOKEN, PI_TOKEN,
	DOCUMENT_TOKEN): New token representing keyword followed by specific