@@ -2,82 +2,28 @@
 // This is free software;  for terms and warranty disclaimer see ./COPYING.
 
 package gnu.xquery.util;
-import gnu.mapping.*;
 import gnu.lists.*;
-import gnu.xml.*;
-import gnu.kawa.xml.KNode;
 import gnu.math.*;
+import gnu.mapping.*;
+import gnu.kawa.xml.StringValue;
 
-public class StringValue extends Procedure1
+public class StringUtils
 {
-  public static final StringValue stringValue
-  = new StringValue("string-value");
-  public static final StringValue string = new StringValue("string");
-
-  public StringValue(String name)
-  {
-    super(name);
-  }
-
-  public static String stringValue (Object node)
-  {
-    StringBuffer sbuf = new StringBuffer();
-    stringValue(node, sbuf);
-    return sbuf.toString();
-  }
-
-  public static void stringValue (Object node, StringBuffer sbuf)
-  {
-    if (node instanceof KNode)
-      {
-	KNode pos = (KNode) node;
-	NodeTree tlist = (NodeTree) pos.sequence;
-	tlist.stringValue(tlist.posToDataIndex(pos.ipos), sbuf);
-	return;
-      }
-    if (node != null && node != Values.empty)
-      sbuf.append(node);
-  }
-
-  public Object apply1 (Object node)
-  {
-    StringBuffer sbuf = new StringBuffer(100);
-    if (node instanceof Values)
-      {
-	TreeList tlist = (TreeList) node;
-	int index = 0;
-	for (;;)
-	  {
-	    int kind = tlist.getNextKind(index);
-	    if (kind == Sequence.EOF_VALUE)
-	      break;
-	    if (kind == Sequence.OBJECT_VALUE)
-	      stringValue(tlist.getPosNext(index), sbuf);
-	    else
-	      tlist.stringValue(tlist.posToDataIndex(index), sbuf);
-	    index = tlist.nextPos(index);
-	  }
-      }
-    else
-      stringValue(node, sbuf);
-    return sbuf.toString();
-  }
-
   public static Object lowerCase (Object node)
   {
-    return stringValue(node).toLowerCase();
+    return StringValue.stringValue(node).toLowerCase();
   }
 
   public static Object upperCase (Object node)
   {
-    return stringValue(node).toUpperCase();
+    return StringValue.stringValue(node).toUpperCase();
   }
 
   public static Object substring (Object str, Object start)
   {
     int i = ((Number) NumberValue.numberValue(start)).intValue() - 1;
 
-    return stringValue(str).substring(i);
+    return StringValue.stringValue(str).substring(i);
   }
 
   public static Object substring (Object str, Object start, Object length)
@@ -85,18 +31,18 @@ public class StringValue extends Procedure1
     int i = ((Number) NumberValue.numberValue(start)).intValue() - 1;
     int len = ((Number) NumberValue.numberValue(length)).intValue();
 
-    return stringValue(str).substring(i, i + len);
+    return StringValue.stringValue(str).substring(i, i + len);
   }
 
   public static Object stringLength (Object str)
   {
-    return IntNum.make(stringValue(str).length());
+    return IntNum.make(StringValue.stringValue(str).length());
   }
 
   public static Object substringBefore (Object str, Object find)
   {
-    String s = stringValue(str);
-    String f = stringValue(find);
+    String s = StringValue.stringValue(str);
+    String f = StringValue.stringValue(find);
     int flen = f.length();
 
     if (flen==0)
@@ -107,8 +53,8 @@ public class StringValue extends Procedure1
 
   public static Object substringAfter (Object str, Object find)
   {
-    String s = stringValue(str);
-    String f = stringValue(find);
+    String s = StringValue.stringValue(str);
+    String f = StringValue.stringValue(find);
     int flen = f.length();
 
     if (flen==0)
@@ -120,15 +66,15 @@ public class StringValue extends Procedure1
 
   public static Object translate (Object str, Object map, Object trans)
   {
-    String m = stringValue(map);
+    String m = StringValue.stringValue(map);
     int mlen = m.length();
-    String sv = stringValue(str);
+    String sv = StringValue.stringValue(str);
 
     if (mlen==0) return sv;
 
     int slen = sv.length();
     StringBuffer s = new StringBuffer(slen);
-    String t = stringValue(trans);
+    String t = StringValue.stringValue(trans);
     int tlen = t.length();
 
     for (int i=0;i < slen;i++)
@@ -157,7 +103,7 @@ public class StringValue extends Procedure1
 	throw new IndexOutOfBoundsException("Invalid string-pad count");
       }
 
-    String sv = stringValue(str);
+    String sv = StringValue.stringValue(str);
     int slen = sv.length();
     StringBuffer s = new StringBuffer(count*slen);
     for (int i=0; i<count; i++) s.append(sv);
@@ -167,31 +113,31 @@ public class StringValue extends Procedure1
 
   public static Object contains (Object str, Object contain)
   {
-    String s = stringValue(str);
-    String c = stringValue(contain);
+    String s = StringValue.stringValue(str);
+    String c = StringValue.stringValue(contain);
 
     return s.indexOf(c) <0 ? Boolean.FALSE : Boolean.TRUE;
   }
 
   public static Object startsWith (Object str, Object with)
   {
-    String s = stringValue(str);
-    String w = stringValue(with);
+    String s = StringValue.stringValue(str);
+    String w = StringValue.stringValue(with);
 
     return s.startsWith(w) ? Boolean.TRUE : Boolean.FALSE;
   }
 
   public static Object endsWith (Object str, Object with)
   {
-    String s = stringValue(str);
-    String w = stringValue(with);
+    String s = StringValue.stringValue(str);
+    String w = StringValue.stringValue(with);
     return s.endsWith(w) ? Boolean.TRUE : Boolean.FALSE;
   }
 
   public static Object stringJoin (Object strseq, Object join)
   {
     StringBuffer s = new StringBuffer();
-    String glue = stringValue(join);
+    String glue = StringValue.stringValue(join);
     int glen = glue.length();
     int index=0;
     boolean started = false;
@@ -203,7 +149,7 @@ public class StringValue extends Procedure1
 
 	if (started && glen > 0)
           s.append(glue);
-        s.append(stringValue(obj));
+        s.append(StringValue.stringValue(obj));
 	started=true;
       }
 
@@ -216,7 +162,7 @@ public class StringValue extends Procedure1
     java.lang.StringBuffer result = new java.lang.StringBuffer();
 
     for (int i = 0; i < count; i++)
-      result.append(stringValue(args[i]));
+      result.append(StringValue.stringValue(args[i]));
     return result.toString();
   }
 
@@ -231,4 +177,42 @@ public class StringValue extends Procedure1
     int ret = coll.compare(val1.toString(), val2.toString());
     return ret < 0 ? IntNum.minusOne() : ret > 0 ? IntNum.one() : IntNum.zero();
   }
+
+  public static void stringToCodepoints$X (Object arg, CallContext ctx)
+  {
+    if (arg == Values.empty || arg == null)
+      return;
+    String str = StringValue.stringValue(arg);
+    int len = str.length();
+    Consumer out = ctx.consumer;
+    for (int i = 0;  i < len;  i++)
+      {
+        char ch = str.charAt(i);
+        // Should handle surrogates - but then we should do so generally. FIXME.
+        out.writeInt((int) ch);
+      }
+  }
+
+  private static void appendCodepoint (Object code, StringBuffer sbuf)
+  {
+    IntNum i =(IntNum)  gnu.kawa.xml.XIntegerType.integerType.cast(code);
+    sbuf.append((char) i.intValue());
+  }
+
+  public static String codepointsToString (Object arg)
+  {
+    if (arg == null)
+      return "";
+    StringBuffer sbuf = new StringBuffer();
+    if (arg instanceof Values)
+      {
+        Values vals = (Values) arg;
+        int ipos = vals.startPos();
+        while ((ipos = vals.nextPos(ipos)) != 0)
+          appendCodepoint(vals.getPosPrevious(ipos), sbuf);
+      }
+    else
+      appendCodepoint(arg, sbuf);
+    return sbuf.toString();
+  } 
 }
